# cthulu-lab

./: .gitignore  LESSONS.md  README.md  index.html  nx.json  package-lock.json  package.json  project.json  vitest.config.ts
.claude/: system-prompt.md
.claude/agents/: analyst.md  backend.md  builder.md  dba.md  devops.md  evaluator.md  fixer.md  frontend.md  lead.md  planner.md  reviewer.md  security.md  specwriter.md  tester.md  writer.md
.claude/commands/: backend.md  brainstorm.md  build.md  deploy.md  eval.md  fix.md  frontend.md  inbox.md  lead.md  plan.md  review.md  secure.md  ship.md  spec.md  standup.md  test.md  weekly.md  write.md
.github/workflows/: release.yml  tailscale-api-test.yml  tailscale-connect.yml  tailscale-deploy.yml
deploy/: build-and-push.sh  k8s.yml
public/sounds/: hallelujah-sound.flac
services/api/: .env.cloud.example  .env.example  Dockerfile  package-lock.json  package.json  project.json
services/web/: Dockerfile  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bundled.rs  lib.rs  main.rs  state.rs
src-tauri/src/agent/: parser.rs  types.rs
src-tauri/src/chat/: manager.rs  types.rs
src-tauri/src/claude/: cli.rs  stream.rs
src-tauri/src/commands/: agent_cmds.rs  auth_cmds.rs  chat_cmds.rs  gateway_cmds.rs  inbox_cmds.rs  issue_cmds.rs  mod.rs  sandbox.rs  skill_cmds.rs  user_vm_cmds.rs  workspace_cmds.rs
src-tauri/src/inbox/: mod.rs  types.rs
src/__tests__/: colors.test.ts  (+8 more)
vm-manager/: README.md
(+140 files in other folders)
