[package]
name = "cthulu-lab"
version = "0.1.0"
description = "AI Agent Cthulu Lab with Looney Tunes personalities"
authors = ["you"]
edition = "2021"

[lib]
name = "cthulu_lab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
